# claude-chat

./: .env.example  .gitignore  PLAN.md  README.md  debug_output.txt  pyproject.toml
migrations/: 002_add_ephemeral_key.sql
skill/chat/: SKILL.md
src/claude_chat/: __init__.py  __main__.py  app.py  config.py  crypto.py  models.py  notifications.py  realtime.py  session.py  supabase_client.py
src/claude_chat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/claude_chat/screens/: __init__.py  chat_view.py  login.py  main.py
src/claude_chat/styles/: app.tcss  chat.tcss  login.tcss  main.tcss
src/claude_chat/widgets/: __init__.py  message_line.py  read_list.py  requests_panel.py  search_panel.py  unread_list.py
tests/: test_crypto.py  test_models.py  test_session.py  test_supabase_client.py
